--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon src/index.ts",
-    "build":"tsc -p .",
-    "start":"node build/index.js"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc -p .",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "dotenv": "^14.3.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -26,6 +27,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.13",
+    "@types/validator": "^13.7.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
