--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false"
   },
   "keywords": [],
   "author": "",
