--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
   "name": "ts_mern_note_app_frontend",
   "homepage": "https://ashish-simplecoder.github.io/ts-mern-note-app/",
+  "proxy":"https://ts-mern-note-api.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
