--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ts_mern_note_app_frontend",
-  "homepage": "https://ashish-simplecoder.github.io/ts-mern-note-app/",
-  "proxy":"https://ts-mern-note-api.herokuapp.com",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +16,6 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -43,7 +41,6 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.21",
-    "gh-pages": "^3.2.3"
+    "@types/styled-components": "^5.1.21"
   }
 }
