--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon typescript/index.ts",
     "build": "tsc -p .",
     "start": "node src/index.js",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false"
