--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon typescript/index.ts",
     "build": "tsc -p .",
     "start": "node src/index.js",
-    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false"
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false",
+    "push":"git push heroku main"
   },
   "keywords": [],
   "author": "",
