--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,8 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src"
-  ]
+  // "include": [
+  //   "src"
+// , "custom.d.ts"  // ]
+  "include": ["./src/**/*", "./custom.d.ts"],
 }
